--- a/authors.html
+++ b/authors.html
@@ -74,7 +74,7 @@ Data Science MVP            </a>
     <div class="row">
         <div class="col-sm-9">
   <h1>Authors on Data Science MVP</h1>
-        <li><a href="https://datasciencemvp.com/author/cliff-clive.html">Cliff Clive</a> (2)</li>
+        <li><a href="https://datasciencemvp.com/author/cliff-clive.html">Cliff Clive</a> (3)</li>
         </div>
         <div class="col-sm-3" id="sidebar">
             <aside>
@@ -86,6 +86,7 @@ Data Science MVP            </a>
 <li class="list-group-item">
   <h4><i class="fa fa-home fa-lg"></i><span class="icon-label">Social</span></h4>
   <ul class="list-group" id="social">
+    <li class="list-group-item"><a href="https://github.com/cliffclive/datasciencemvp"><i class="fa fa-github-square fa-lg"></i> GitHub</a></li>
     <li class="list-group-item"><a href="https://www.linkedin.com/in/cliffordclive/"><i class="fa fa-linkedin-square fa-lg"></i> LinkedIn</a></li>
     <li class="list-group-item"><a href="https://twitter.com/cliffclarkclive"><i class="fa fa-twitter-square fa-lg"></i> Twitter</a></li>
   </ul>
