edited About Me title, set AOSEMN to hidden

--- a/pages/resources/index.html
+++ b/pages/resources/index.html
@@ -50,8 +50,8 @@ Data Science MVP            </a>
         </div>
         <div class="collapse navbar-collapse navbar-ex1-collapse">
             <ul class="nav navbar-nav">
-                         <li><a href="https://datasciencemvp.com/pages/about-us/">
-                             About Us
+                         <li><a href="https://datasciencemvp.com/pages/about-me/">
+                             About Me
                           </a></li>
                          <li class="active"><a href="https://datasciencemvp.com/pages/resources/">
                              Resources
