--- a/authors.html
+++ b/authors.html
@@ -49,8 +49,8 @@ Data Science MVP            </a>
         </div>
         <div class="collapse navbar-collapse navbar-ex1-collapse">
             <ul class="nav navbar-nav">
-                         <li><a href="https://datasciencemvp.com/pages/about-us/">
-                             About Us
+                         <li><a href="https://datasciencemvp.com/pages/about-me/">
+                             About Me
                           </a></li>
                          <li><a href="https://datasciencemvp.com/pages/resources/">
                              Resources
@@ -74,7 +74,7 @@ Data Science MVP            </a>
     <div class="row">
         <div class="col-sm-9">
   <h1>Authors on Data Science MVP</h1>
-        <li><a href="https://datasciencemvp.com/author/cliff-clive.html">Cliff Clive</a> (3)</li>
+        <li><a href="https://datasciencemvp.com/author/cliff-clive.html">Cliff Clive</a> (2)</li>
         </div>
         <div class="col-sm-3" id="sidebar">
             <aside>
